# src/infrastructure/http/routes/trainer-routes.ts
@@ -8,14 +8,22 @@ router.post('/api/v1/trainers/', (req, res) => {
   /*
       #swagger.tags = ['Trainers']
       #swagger.summary = 'Cadastra um novo Treinador'
+      #swagger.description = 'O e-mail é único: cadastros repetidos retornam 409.'
       #swagger.requestBody = {
         required: true,
         content: { 'application/json': { schema: { $ref: '#/definitions/CreateTrainerDto' } } }
       }
-      #swagger.responses[201] = { description: 'Treinador cadastrado com sucesso' }
+      #swagger.responses[201] = {
+        description: 'Treinador cadastrado com sucesso',
+        content: { 'application/json': { schema: { $ref: '#/definitions/Trainer' } } }
+      }
       #swagger.responses[400] = {
         description: 'Dados inválidos',
-        content: { 'application/json': { schema: { $ref: '#/definitions/ErrorResponse' } } }
+        content: { 'application/json': { schema: { $ref: '#/definitions/TrainerBadRequestError' } } }
+      }
+      #swagger.responses[409] = {
+        description: 'Já existe um Treinador cadastrado com este e-mail',
+        content: { 'application/json': { schema: { $ref: '#/definitions/TrainerConflictError' } } }
       }
     */
   return controller.create(req, res);
